tests/js_error/source_locations/expression/delete/delete_binding.js
var obj = new Proxy(
  { foo: 1 },
  {
    has() {
      throw new Error()
    }
  }
);

with (obj) {
  delete foo;
}